--- a/PROYECTO-MJC memoorize/login/recuperar/css/style.css
+++ b/PROYECTO-MJC memoorize/login/recuperar/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../../img/view-underwater-sea-life-cartoon-style.jpg);
+    background-image: url(../../../img/view-underwater-sea-life-cartoon-style.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
@@ -23,7 +23,7 @@ body{
     width: 28%;
     height: auto;
     border-radius: 10px;
-    background-image: url(../../img/login.jpg);
+    background-image: url(../../../img/login.jpg);
     opacity: 2;
     transition: 200ms;
     margin: auto;
@@ -210,13 +210,34 @@ a:link, a:visited, a:active {
     }
 }
 
+/*sonido*/
+#playButton {
+    font-size: 20px;
+    padding: 10px 20px;
+    background-color: rgba(73, 20, 20, 0);
+    border: none;
+    cursor: pointer;
+    position: relative;
+    top: 2%;
+
+    transition: 100ms;
+}
+.imgSonido{
+    width: 70px;
+    height: 70px;
+}
+#playButton:hover {
+    transform: scale(1.1);
+}
+
+
 /*burbujas*/
 
 .burbuja {
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url('../../img/realistic-style-soap-bubbles-background.png') repeat;
+    background: url('../../../img/realistic-style-soap-bubbles-background.png') repeat;
     opacity: 0.8;
     animation: moveStars 95s linear infinite;
     animation: pulse 6s infinite;
