--- a/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
@@ -1,32 +1,15 @@
 body{
-    background-image: url(../../../img/fondo.jpg);
+    background-image: url(../../../img/view-underwater-sea-life-cartoon-style.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-}
-
-/*sonido*/
-#playButton {
-    font-size: 20px;
-    padding: 10px 20px;
-    background-color: rgba(73, 20, 20, 0);
-    border: none;
-    cursor: pointer;
-    transition: 1s;
-}
-.imgSonido{
-    width: 60px;
-    height: 60px;
-}
-#playButton:hover {
-    transform: scale(1.1);
 }
 
 /*botones*/
 .btnLogin{
     width: 200px;
     height: 40px;
-    background-image: url(../../../img/boton.jpg);   
+    background-color: rgb(10, 97, 82) !important;   
     transition: 600ms;
     margin-bottom: 3%;
 }
@@ -37,9 +20,10 @@ body{
 /*logo*/
 
 .logo{
-    width: 90%;
+    width: 75%;
     position: relative;
     left: 15%;
+    bottom: 10%;
     transition: 200ms;  
 }
 .logo:hover{
@@ -48,13 +32,12 @@ body{
 
 /*Formulario*/
 #formulario{
-    width: 28%;
+    width: 30%;
     height: auto;
     border-radius: 10px;
-    background-color: rgba(168, 168, 168, 0.096);
+    background-image: url(../../../img/login.jpg);
     transition: 200ms;
     margin: auto;
-    border: 1px solid rgb(155, 155, 155);
     position: relative;
     top: -40px;
 }
@@ -66,12 +49,9 @@ body{
     color: aliceblue;
     text-align: center;
 }
-.linea{
-    border-top: 1px solid black;
-    margin-top: 3% !important;
-}
 
 /*iconoInput*/
+
 .inputIcon{
     max-width: 420px;
     position: relative;
@@ -87,26 +67,31 @@ body{
     user-select: none;
     cursor: pointer;
 }
-
 #icon img{
     width: 15px;
     height: 15px;
 }
 input.input{    
   padding-right: 2.5rem;
-  background-color: orange;
+  background-color: rgb(141, 212, 188);
   border: 1px solid black;
   transition: 100ms;
 }
 input.input:focus{
-    background-color: orange;
+    background-color: rgb(141, 212, 188);
     border: 1px solid black;
     box-shadow: 0px 0px 5px black;
 }
 input.input:hover {  
-    background-color: rgb(255, 145, 0);
+    background-color: rgb(112, 189, 163);
     
 }
+.text{
+    color: aliceblue;
+    text-align: center;
+    padding-bottom: 6%;
+}
+
 
 /*iconosRedes*/
 .logoRedes{
@@ -127,7 +112,7 @@ input.input:hover {
 .gitHub{
     position: relative;
     left: 40%;
-}
+}   
 
 /*texto*/
 .textCrear{
@@ -137,7 +122,7 @@ input.input:hover {
     text-align: center;
 }
 .textCrear a{
-    color: rgb(255, 0, 0) !important; 
+    color: rgb(81, 179, 81) !important;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif !important;
 }
