--- a/PROYECTO-MJC memoorize/css/style.css
+++ b/PROYECTO-MJC memoorize/css/style.css
@@ -5,7 +5,41 @@ body{
     background-attachment: fixed;
     overflow: hidden;
 }
-
+.welcome-text {
+    position: absolute;
+    bottom: 190px;
+    left: 40%;
+    transform: translateX(-50%);
+    font-family: 'Pacifico', cursive; 
+    color: #b9ddf5;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    animation: fadeInUp 1s ease-in-out forwards;
+    animation:  pulse 6s infinite alternate;;
+  }
+  .welcome-text h1 {
+    font-size: 4.0rem; 
+  }
+  
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateX(-50%) translateY(20px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateX(-50%) translateY(0);
+    }
+  }
+  
+  @keyframes pulse {
+    0% {
+      transform: translateX(-50%) scale(1);
+    }
+    100% {
+      transform: translateX(-50%) scale(1.05);
+    }
+  }
 /*jugar*/
 
 .burbuja {
