--- a/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
+++ b/PROYECTO-MJC memoorize/login/resgistrate/css/style.css
@@ -3,8 +3,37 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
+    overflow: hidden;
+}
+.burbuja {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('../../../img/realistic-style-soap-bubbles-background.png') repeat;
+    opacity: 0.8;
+    animation: moveStars 95s linear infinite;
+    animation: pulse 6s infinite;
 }
 
+@keyframes moveStars {
+    
+    from { background-position: 0 0; }
+    to { background-position: -1000px 0; }
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
 /*botones*/
 .btnLogin{
     width: 200px;
