--- a/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/quiz/niveles/css/style.css
@@ -33,15 +33,14 @@ body{
     background-image: url(../../../../img/input/vacio.png);
     background-repeat: no-repeat;
     background-size: 100% 99%;
-    width: 80px;
-    height: 80px;
+    width: 85px;
+    height: 85px;
     border: none;
     outline: none;
     font-size: 35px;
     text-transform: uppercase;
-    color: rgb(0, 0, 0);
     -webkit-text-fill-color: rgb(255, 255, 255); /* Will override color (regardless of order) */
-    -webkit-text-stroke: 3px rgb(255, 255, 255);
+    -webkit-text-stroke: 4px rgb(255, 255, 255);
     text-align: center;
 }
 .result{
@@ -66,13 +65,19 @@ body{
 .gold{
     background-image:url(../../../../img/input/oro.png);
     background-repeat: no-repeat;
-    background-size: 99% 110%;
+    background-size: 100% 99%;
+    -webkit-text-fill-color: rgb(255, 255, 255); /* Will override color (regardless of order) */
+    -webkit-text-stroke: 4px rgb(255, 255, 255);
 }
 .green{
     background-image:url(../../../../img/input/esmeralda.png);
     background-repeat: no-repeat;
-    background-size: 99% 110%;
+    background-size: 100% 99%;
+    -webkit-text-fill-color: rgb(255, 255, 255); /* Will override color (regardless of order) */
+    -webkit-text-stroke: 4px rgb(255, 255, 255);
 }
 .no{
-    background-color: transparent;
+    background-color: rgb(0, 0, 0);
+    box-shadow: 0px 0px 10px #000 ;
+    border-radius: 50px;
 }
