--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -117,14 +117,34 @@ body{
     width: 100%;
     height: 100%;
     border: none;
-    animation: moveLogoVertical 2s infinite alternate ease-in-out;
+    animation: moveLogoVertical 5s infinite alternate ease-in-out;
 }
 @keyframes moveLogoVertical {
     0% { transform: translateY(0); }
     100% { transform: translateY(25px); }
 }
+#titulo-juegos {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3.0em;
+    color: #ffffff;
+    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+    margin-bottom: 10px;
+    position: relative;
+    top: 100px;
+    text-align: center;
+    background-image: url('../../menu/img/32.png');
+    background-color: #ffffff00;
+    background-size: cover; 
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 30px;
+    margin-left: 480px; 
+    border-radius: 10px;
+    display: inline-block;
+    border: 5px solid #7169ff00; 
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
+}
 
-/* Animación al pasar el mouse */
 .game-button:hover {
     transform: scale(1.2);
     border: none;
