--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -138,7 +138,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     padding: 30px;
-    margin-left: 480px; 
+    margin-left: 40%; 
     border-radius: 10px;
     display: inline-block;
 
