--- a/PROYECTO-MJC memoorize/juegos/rompecabezas-prueba/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/rompecabezas-prueba/css/style.css
@@ -1,5 +1,5 @@
 ﻿body{
-    background-image: url(../../img/view-underwater-sea-life-cartoon-style.jpg);
+    background-image: url(../../../img/view-underwater-sea-life-cartoon-style.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: 100% 100%;
