--- a/PROYECTO-MJC memoorize/menu/css/style.css
+++ b/PROYECTO-MJC memoorize/menu/css/style.css
@@ -161,8 +161,8 @@ body{
 .game-description {
     display: none;
     position: absolute;
-    top: 120px;
-    left: 10%;
+    top: 85%;
+    left: 20%;
     width: 200px;
     background-image: url('../../menu/img/botonw.png');
     background-color: rgba(255, 255, 255, 0); 
