--- a/PROYECTO-MJC memoorize/interfaz/bar.css
+++ b/PROYECTO-MJC memoorize/interfaz/bar.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-
+}
 .container {
     width: 980%;
     max-width: 1300px;
