--- a/PROYECTO-MJC memoorize/juegos/rompecabezas-prueba/css/style.css
+++ b/PROYECTO-MJC memoorize/juegos/rompecabezas-prueba/css/style.css
@@ -1,17 +1,202 @@
-﻿body{
-    background-image: url(../../../img/view-underwater-sea-life-cartoon-style.jpg);
+body{
+    background-image: url('../../../img/fondoWordle.jpg');
+    background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100% 100%;
     background-position: center;
     overflow: hidden;
 }
-h2{
-    font-weight:normal;
-    text-align:center;
+
+.logo img{
+    width: 280px;
+    height: 280px;
+    position: relative;
+    left: 40%;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
-h3{
-    font-weight:normal;
-    margin:3px 0px;
-    text-align:center;
+.niveles{
+    position: relative;
+    left: 22%;
+}
+
+.nivel{
+    width: 100px !important;
+    height: 100px;
+    background-image: url(../../../img/wordleNiveles.jpg);
+    background-size: cover;
+    border-radius: 10px;
+    margin: 1%;
+    box-shadow: 0px 0px 10px #000;
+    transition: 300ms;
+    cursor: pointer;
+    text-align: center;
+    -webkit-box-direction: unset;
+    color: rgb(0, 0, 0) !important;
+}
+.nivel h1{
+    margin: 20%;
+}
+a:link, a:visited, a:active {
+    text-decoration:none;
+    color: rgb(0, 0, 0);
+}
+.nivel:hover{
+    transform: scale(1.1);
+}
+
+.letra{
+    
+    text-shadow: 1px 1px 1px rgb(244, 244, 244);
+    text-align: center;
+    margin-top: 4px;
+    font-size: 25px;
+    font-family: serif;
+
+
+}
+
+.burbuja {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: url('../../../img/realistic-style-soap-bubbles-background.png') repeat;
+    opacity: 0.8;
+    animation: moveStars 95s linear infinite;
+    animation: pulse 6s infinite;
+}
+
+@keyframes moveStars {
+    
+    from { background-position: 0 0; }
+    to { background-position: -1000px 0; }
+}
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.1);
+        opacity: 0.7;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+.container{
+    position: relative;
+    left: 105px;
+
+    
+}
+
+.animacion{
+    cursor: pointer;
+    transition: transform 0.3s;
+}
+
+.animacion:hover{
+    transform: scale(1.2);
+}
+
+/*otro*/
+
+.button-container {
+    position: relative;
+    height: 20px;
+    left: 30px;
+}
+
+.hover-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #6200ea;
+    color: white;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.hover-button:hover {
+    transform: scale(1.2);
+}
+
+.tooltip {
+    position: absolute;
+    bottom: 100%;
+    left: 48px;
+    transform: translateX(-50%);
+    background-color: #333;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 3px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    white-space: nowrap;
+    pointer-events: none;
+}
+
+.button-container:hover .tooltip {
+    opacity: 1;
+}
+
+/*sonido*/
+#playButton {
+    font-size: 20px;
+    padding: 10px 20px;
+    background-color: rgba(73, 20, 20, 0);
+    border: none;
+    cursor: pointer;
+    position: relative;
+    left: 10%;
+    top: 2%;
+}
+.imgSonido{
+    width: 70px;
+    height: 70px;
+}
+#playButton:hover {
+    transform: scale(1.1);
+}
+
+/*usuario*/
+#usuarioBtn{
+    font-size: 20px;
+    background-color: rgba(73, 20, 20, 0);
+    border: none;
+    cursor: pointer;
+    position: relative;
+    left: 10%;
+    top: 2%;
+}
+.imgUsuario{
+    width: 70px;
+    height: 70px;
+}
+#usuarioBtn:hover{
+    transform: scale(1.1);
+}
+
+
+/*configuracion*/
+#configuracionBtn{
+    font-size: 20px;
+    padding: 10px 10%;
+    background-color: rgba(73, 20, 20, 0);
+    border: none;
+    cursor: pointer;
+    position: relative;
+    left: 10%;
+    top: 2%;
+}
+.imgConfiguracion{
+    width: 70px;
+    height: 70px;
+}
+#configuracionBtn:hover {
+    transform: scale(1.1);
 }
